[ADD] added elastisearch

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,6 +37,12 @@ redis:
   image: redis:latest
   ports:
     - "6379:6379"
+    
+elasticsearch:
+  restart: always
+  image: elasticsearch:2.1
+  ports:
+    - "9200:9200"
 
 data:
   restart: always
